--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -641,14 +641,8 @@ In addition to issues of aesthetics, home knowledge of game mechanics and dynami
 Thus observations from video data in this study support existing research which highlight the motivating potential of incorporating home interests in games, coding and media projects [@resnick_mothers_2012; @papert_mindstorms:_1980]. They also support findings of other research on the use of funds of knowledge and interest in digital projects as motivating factors and as a way to overcome barriers to alien cultures [@gutierrez_learning_2019-1; @moje2001maestro]. This research also aligns with PBL research that indicates that allowing participants to incorporate home interests can be highly motivating both in initial stages [@swirski_does_2018-1; @penuel_connecting_2022], and to sustain activity and overcome problems in order to share the personalised object created [@barron_interest_2006]. I also propose that this use of the MDA framework as a way of providing varied learning pathways has potential to aid facilitators to align with existing inclusive pedagogy, a point I explore in more detail in the discussion section.
 
 
-#### Summary: Home Funds and RQs - MOVED FROM CH. 7 TO 6 - INTEGRATE OR MOVE TO DISCUSSION.
 
 
-
-
-
-There is also evidence here that frictions involved in dealing with participant expectations of the genre and professionalism of the game they will create, are helped by the use of a templated game. Both in terms of the technical platform and the implied narrative and creative frame which scaffolds the initial creative process. This supports existing research on the value of constraints in facilitating rapid creative improvisation in the areas of music and drama. The domains of programming, game jams and hackathons also use constraints in a similar way [@gabler2005prototype].
-HOW TO EXTEND?
 
 
 
@@ -854,6 +848,11 @@ Within the concept of jamming, activity which is casual seemingly non-productive
 
 I propose that the concept of jamming can be introduced and supported as a way of encouraging co-development of practices and making styles as proposed by Gutiérrez and Rogoff [@gutierrez_cultural_2003]
 
+
+
+MOVED HERE. 
+There is also evidence here that frictions involved in dealing with participant expectations of the genre and professionalism of the game they will create, are helped by the use of a templated game. Both in terms of the technical platform and the implied narrative and creative frame which scaffolds the initial creative process. This supports existing research on the value of constraints in facilitating rapid creative improvisation in the areas of music and drama. The domains of programming, game jams and hackathons also use constraints in a similar way [@gabler2005prototype].
+HOW TO EXTEND?
 
 
 ### Implications for practitioners - MOVE LATER?
