--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -717,37 +717,44 @@ This section has explored the use of GDPs within strategies and processes that o
 
 **TADS / sannino vs gutierrez - and the purpose of inclusivity / equity**
 
-As part of this discussion of the role of GDPs not only as self-contained mediational tools, but as part of wider repertoires of practice is also explored. The reason being, that other non-GDP elements of the learning design are mixed together in these emerging repertoires, and thus to neglect to explore them would give an incomplete picture. However, I attempt to do this briefly to avoid overloading the reader.  OR THIS IS ONE IN APPENDIX
+This section continues analysis of the diverse roles of GDPs the game making activity using CHAT concepts including: GDP use as mediational tools, as incorporated part of wider repertoires of practice, and the role of GDPs within participant development of transformational agency.
 
-Some discussion of how these findings on varied GDP use can be interpreted given CHAT concepts of  mediation and incorporation in wider repertoires of practice is useful at this point before exploring the concepts in relation to agency and inclusion in the following chapter.
-THIS SHOULD BE A RECAP GIVEN PREVIOUS USE IN EXAMPLES. USE TERMS IN VIGNETTE EXAMPLES. AND THEREFORE MOVE SOME OF THIS TO THE INTRO?
+Addressing GDPs as a mediational tool. Chapter 5 outlined design decisions and this chapter explored the impact. For example, the uses of the quick start activities, tutorials and code snippets as supporting tools, if viewed in isolation can been as more straight forward, triangular form of subject, tool, object mediation (see Chapter 4 diagram).
 
-Gutiérrez's focus on repertoires of practice, can be contrasted to  the focus of double stimulation and a form of experimental mediation within TADS [Sannio], to incorporate also a wider cultural focus of the learning process. NEXT CHAPTER?
+Turning to repertoires, other non-GDP elements of the learning design are mixed together in these emerging repertoires and thus to neglect to explore them would give an incomplete picture. Gutiérrez's focus on repertoires of practice draws on the importance of wider cultural focus of the learning process.
 
     Such a perspective on the relationship between culture and learning is also about attention to the “cultural mediation of thinking” (Moll, 1998) cited in [@digiacomo_seven_2017] p.44
 
-It is of value to explore Gutiérrez's focus on movement of identity between settings and the role of facilitators to facilitate this via learning design in the context of this design.
+Of particular relevance here is Gutiérrez's focus on movement of identity between settings and the role of facilitators to facilitate this via learning design.
 
-This justifies a wider focus on cultural elements, and the evolving medium culture via playtesting. And following that the link to inclusive linguistic element of the pedagogy which can be aligned with other inclusive practices of UDL. In this study the focus is less on aspects of ethnical cultural elements and more the those related to neurodiversity.
-YES - BUT IS THERE SPACE FOR THIS IF SO WHERE?
+In this chapter's discussion this wider focus on cultural elements is addressed via an exploration of flexible approaches to the design practice, it is also explored in the following chapter in an exploration of the evolving culture of this communities playtesting practices.
 
-### Observations on emerging flexible design practices (MORE ON INTERPERSONAL LEVEL)
+<!-- And following that the link to inclusive linguistic element of the pedagogy which can be aligned with other inclusive practices of UDL. In this study the focus is less on aspects of ethnical cultural elements and more the those related to neurodiversity.
+IS THERE SPACE FOR THIS here - IF SO WHERE? - NEXT CHAPTER PROBABLY  -->
+
+The third aspect is the more experimental, innovative form of mediation within TADS [Sannio].
+This aspect is explored to an extent here, SAY HOW, but is also taken up in more detail in the following chapter.
+
+### Observations and analysis on interventions to aid construction of repertoires of practice
+
+Bring in elements of side missions, drama process and maker types.
+
+HOW EXACTLY TO DO THIS - AND IS THIS THE RIGHT PLACE?
+OR NEXT CHAPTER?
+OR DROP?
+
+
+### Observations on emerging design practices
 
 <!-- NOTE To restructure. -->
 
-This section discusses findings on community and social activity in a way which aims to extend CHAT theory of Sannino and Gutierrez with specific domain observations  / concrete examples.
+I propose that new GDPs elements can be integrated with existing home repertoires of practice to form novel flexible design practices.
 
-<!-- This section outlines and analyses potential useful practices which  -->
+Several of the observations in vignettes described above, especially those involving interpersonal guided participation, detail the interweaving of novel concepts and practices with existing repertoires. An example being the use of visual prototyping explored above and in more detail in appendix.prototyping.
 
-This chapter thus builds on CHAT concept of mediation and building repertoires.  
 
-In previous writing I have identified what I can as _flexible design practices_ used a counterpoint to a potentially more prescriptive interpretation of design thinking stages.
+In the previous chapter I outlined this learning design as aligned more with a step-based approach than a design-build-test one.  As mentioned in Chapter 3, the process of examining video data also did not align with common design thinking stages as I initially thought might be the case. This section therefore describes a set of evolving and flexible design practices as a counterpoint to  design thinking stages.
 
-WHAT IS THE LINK BETWEEN STAGED APPROACH AND STEPWISE INSTRUCTION?
-
-The use of GDPs here can be seen to be quite flexible as
-- a mediational STRATEGY
-- in the way it is included into wider repetoires, merged (assemblages)
 
 This includes emerging norms, DoL, and community behaviour.  
 
@@ -850,7 +857,7 @@ I propose that the concept of jamming can be introduced and supported as a way o
 
 
 
-MOVED HERE. 
+MOVED HERE.
 There is also evidence here that frictions involved in dealing with participant expectations of the genre and professionalism of the game they will create, are helped by the use of a templated game. Both in terms of the technical platform and the implied narrative and creative frame which scaffolds the initial creative process. This supports existing research on the value of constraints in facilitating rapid creative improvisation in the areas of music and drama. The domains of programming, game jams and hackathons also use constraints in a similar way [@gabler2005prototype].
 HOW TO EXTEND?
 
